# AndroidPdfViewer

./: README.md  build.gradle  gradle.properties  settings.gradle
android-pdf-viewer/: build.gradle
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/: AnimationManager.java  DecodingAsyncTask.java  DragPinchManager.java  PDFView.java  PDocSearchTask.java  PDocSelection.java  PagesLoader.java  PdfFile.java  RenderingHandler.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/listener/: Callbacks.java  OnHighlightClickListener.java  OnScaleListener.java  OnSearchBeginListener.java  OnSearchEndListener.java  OnSearchMatchListener.java  OnSelectionListener.java  OnTextSelectionListener.java
android-pdf-viewer/src/main/res/values/: color.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pdfium/: build.gradle
pdfium/src/androidTest/java/com/vivlio/android/pdfium/: ExampleInstrumentedTest.java
pdfium/src/main/java/com/vivlio/android/pdfium/: PdfDocument.java  PdfPasswordException.java  PdfiumCore.java  TOCEntry.java  TextImage.java
pdfium/src/main/jni/: BufferedBlockWriter.h  CMakeLists.txt  pdfium.cpp  toc-helper.cpp  toc-helper.h  util.hpp
pdfium/src/main/jni/include/utils/: Mutex.h
pdfium/src/test/java/com/vivlio/android/pdfium/: ExampleUnitTest.java
sample/: build.gradle
sample/src/androidTest/java/com/pp/sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/github/barteksc/sample/: PDFViewActivity.java
sample/src/main/java/com/pp/sample/: BookmarkAdapter.java  MainActivity.java  PdfSearchListAdapter.java  PdfSearchResultActivity.java  SearchResultsCacheManager.java  TOCItem.java
sample/src/main/res/drawable/: baseline_menu_24.xml  baseline_menu_book_24.xml  ic_action_close.xml  navigate_before.xml  table_of_content_shape.xml
sample/src/main/res/layout/: activity_main.xml  activity_pdf_search_result.xml  item_bookmark_child.xml  item_bookmark_parent.xml  layout_menu_popup_text_selection.xml  layout_table_of_content.xml  list_item_pdf_search_result.xml
sample/src/main/res/menu/: menu_text_selection_popup.xml
sample/src/main/res/values/: strings.xml  themes.xml
sample/src/main/res/values-night/: themes.xml
sample/src/test/java/com/pp/sample/: ExampleUnitTest.java
(+22 files in other folders)
